@@ -36,6 +36,7 @@
  -control panel settings
  -current state
  -open data panels with their channels
+-Added rbnb server icon and display server name as root of channel list
 
 1.2.0 - June 21, 2005
 -Added command line option (-s or --time-scale) to set the time scale
